--- a/.github/workflows/build-deploy-docker-image.yml
+++ b/.github/workflows/build-deploy-docker-image.yml
@@ -20,7 +20,7 @@ jobs:
           - "packages/spring-boot-demo"
     steps:
       - uses: actions/checkout@v4
-      - uses: ./github/actions/modified-file-check
+      - uses: ./.github/actions/modified-file-check
         id: check_packages
         name: Check for changes to ${{ matrix.package }}/constants.env
         with:
