--- a/.github/workflows/build-deploy-docker-image.yml
+++ b/.github/workflows/build-deploy-docker-image.yml
@@ -1,13 +1,11 @@
 name: "Build: Docker image"
 
 on:
-  push:
-    branches:
-      - main
+  - pull_request
 
 jobs:
   build_and_publish:
-    name: Build and publish docker image
+    name: Validate docker image
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -25,22 +23,22 @@ jobs:
         name: Check for changes to ${{ matrix.package }}/constants.env
         with:
           pattern: (.*)${{ matrix.package }}/constants.env
-          from: ${{ github.event.before }}
-          to: ${{ github.sha }}
-      - if: ${{ steps.check_modified_files.outputs.has_changes == 'true' }}
+          from: ${{ github.event.pull_request.base.sha }}
+          to: ${{ github.event.pull_request.head.sha }}
+      - if: ${{ steps.check_packages.outputs.has_changes == 'true' }}
         name: Login to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login -u "${{ github.actor }}" --password-stdin ghcr.io
-      - if: ${{ steps.check_modified_files.outputs.has_changes == 'true' }}
+      - if: ${{ steps.check_packages.outputs.has_changes == 'nothing' }}
         name: add a self signed certficate to the build context
         env:
           SHELL_PRIVATE_CRT: ${{ secrets.SHELL_PRIVATE_CRT }}
         working-directory: ${{ matrix.package }}
         run: echo "$SHELL_PRIVATE_CRT" > shell-private-type-1-root-ca.crt
-      - if: ${{ steps.check_modified_files.outputs.has_changes == 'true' }}
+      - if: ${{ steps.check_packages.outputs.has_changes == 'true' }}
         name: Build Docker Image
         working-directory: ${{ matrix.packages }}
         run: npm run docker:build
-      - if: ${{ steps.check_modified_files.outputs.has_changes == 'true' }}
+      - if: ${{ steps.check_packages.outputs.has_changes == 'true' }}
         name: Build Docker Image
         working-directory: ${{ matrix.packages }}
         run: npm run docker:publish
